Fixed nav bar z-index

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ nav {
   background-color: white;
   top: 0px;
   height: 50px;
+  z-index: 100;
 }
 
 nav ul {
